[package]
name = "pgquerymon"
version = "0.9.0"
edition = "2025"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlformat = "0.3.5"
syntect = "5.0"
regex = "1.10"
arboard = "3.4"
chrono = { version = "0.4", features = ["serde"] }
